# cpp-thread-pool-lib

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
cmake/: cpp_thread_pool_config.cmake.in
configs/: thread_pool.conf
docs/: architecture.md  design_decisions.md  git_history.md  performance.md  repository_metadata.md  troubleshooting.md
examples/: basic_usage.cpp  benchmark.cpp  scheduled_tasks.cpp
include/cpp_thread_pool/: config_manager.hpp  logger.hpp  metrics_collector.hpp  task_queue.hpp  task_scheduler.hpp  thread_pool.hpp  types.hpp  version.hpp  worker.hpp
scripts/: build.sh  run_coverage.sh  run_valgrind.sh
src/: config_manager.cpp  logger.cpp  metrics_collector.cpp  task_queue.cpp  task_scheduler.cpp  thread_pool.cpp  worker.cpp
tests/: config_manager_test.cpp  integration_test.cpp  task_queue_test.cpp  thread_pool_test.cpp
